Big overhaul to use and abuse module system
Signed-off-by: cpw <cpw+github@weeksfamily.ca>